--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,12 @@
  * It is generally better to create a new file per style scope.
  */
 
+// Bootstrap
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+// Variables
+@import "base/variables";
+
+// Partials
+@import "partials/layouts/*";
