--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,30 @@
-<h2>Sign up</h2>
+<div class="container" id="sign-up-form">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+   <div class="row">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <h1>Get rid of your extra food,</h1>
+      <h1>Feed your community!</h1>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="col-sm-offset-4 col-sm-4">
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+         <h3>Sign Up</h3>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+         <%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
-<%= render "devise/shared/links" %>
+            <%= f.text_field :name, placeholder: 'Your name (Will be shown publicly)', class: 'form-control' %>
+
+            <%= f.text_field :email, placeholder: 'Email', class: 'form-control' %>
+
+            <%= f.password_field :password, placeholder: 'Password', class: 'form-control' %>
+
+            <%= f.password_field :password_confirmation, placeholder: 'Confirm Password', class: 'form-control' %>
+
+            <%= f.submit 'Sign Up', class: 'btn sign-up-button' %>
+
+         <% end %>
+
+      </div>
+
+   </div>
+
+</div>
