Gave signup the boostrap treatment, changes its route to be just signup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,9 @@
 // Variables
 @import "base/variables";
 
+// Defaults
+@import "base/default";
+
 // Partials
+@import "partials/*";
 @import "partials/layouts/*";
