--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
    <div class="row">
 
       <h1>Get rid of your extra food,</h1>
-      <h1>Feed your community!</h1>
+      <h1>feed your community!</h1>
 
       <div class="col-sm-offset-4 col-sm-4">
 
