--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -1,9 +1,28 @@
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  <ul class="nav navbar-nav">
+<div class="collapse navbar-collapse navbar-right" id="navbar-collapsible-content">
+   <ul class="nav navbar-nav">
+      <% if user_signed_in? %>
+         <li class="dropdown pc-menu">
+            <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
+               <span id="user-name"><%= current_user.name %></span>
+               <span class="caret"></span>
+            </a>
 
-  </ul>
+            <ul class="dropdown-menu" role="menu">
+               <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+               <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+            </ul>
+         </li>
 
-  <ul class="nav navbar-nav navbar-right">
+         <li class="mobile-menu">
+            <%= link_to 'Edit Profile', edit_user_registration_path %>
+         </li>
+         <li class="mobile-menu">
+            <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+         </li>
 
-  </ul>
-</div><!-- /.navbar-collapse -->
+      <% else %>
+         <li> <%= link_to 'Login', login_path %> </li>
+         <li> <%= link_to 'Signup', signup_path %> </li>
+      <% end %>
+   </ul>
+</div>
