Switched which gem loaded javascript runtime. Also WIP donation cards
donation card's styling is a WIP. need to get the javascript to execute with a javascript runtime.

--- a/app/assets/stylesheets/partials/donations.scss
+++ b/app/assets/stylesheets/partials/donations.scss
@@ -23,3 +23,21 @@
 .donation-content {
    display: none;
 }
+
+.solid-color-mode, .border-color-mode {
+   .donation-text {
+      text-align: center;
+   }
+}
+
+.solid-color-mode {
+   .donation-text {
+      padding: 10px;
+      background-color: white;
+      border-radius: 25px;
+   }
+}
+
+.border-color-mode {
+   background-color: white;
+}
