--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -6,3 +6,11 @@
       display: none !important;
    }
 }
+
+@media screen and (max-width: 1000px) {
+   .solid-color-mode, .border-color-mode {
+      .donation-text {
+         font-size: 16px;
+      }
+   }
+}
