Refractored indext.html into two subfiles

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,7 @@
 <%= render 'donations/modal' %>
 <div class="container">
    <div class="row">
-      <div id="side-menu" class="col-sm-3">
-      </div>
-
-      <div id="main-content" class ="col-sm-9">
-         <%= render @donations %>
-      </div>
+      <%= render 'pages/index/side_menu' %>
+      <%= render 'pages/index/main_content' %>
    </div>
 </div>
