Updated region to include different cities. RIght nav bar shows regions
But clicking the region is broken.

--- a/app/views/pages/index/side_menu/_no_login_required_links.html.erb
+++ b/app/views/pages/index/side_menu/_no_login_required_links.html.erb
@@ -1,5 +1,11 @@
-<li id="global">
-   <%= link_to global_donations_path do %>
-      <i class="fa fa-user-circle-o" aria-hidden="true"></i>Global Donations
+<li id="san_luis_obispo_county">
+   <%= link_to san_luis_obispo_county_donations_path do %>
+      <i class="fa fa-user-circle-o" aria-hidden="true"></i>San Luis Obispo County Donations
+   <% end %>
+</li>
+
+<li id="santa_barbara_county">
+   <%= link_to santa_barbara_county_donations_path do %>
+      <i class="fa fa-users" aria-hidden="true"></i>Santa Barbara County Donations
    <% end %>
 </li>
