Added more data to seed file. Fixed bug where pagination wasn't working.

--- a/app/views/donations/_region.html.erb
+++ b/app/views/donations/_region.html.erb
@@ -15,7 +15,7 @@
       </div>
    </div>
 
-   <div class="infinte-scroll">
+   <div class="infinite-scroll">
       <%= will_paginate @donations %>
    </div>
 </div>
