Added fancy bootstrap css styling when viewing donations within a region

--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="single-donation-content">
+<div id="single-donation-content" class="container">
    <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
          <div class="donated-by">Donated By <%= @donation.user.name %> </div>
