--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -32,3 +32,8 @@ a:hover, a:active, a:link, a:visted {
 .control-label {
    display: none;
 }
+
+.login-button, .sign-up-button {
+   background-color: $navbarColor;
+   color: white !important;
+}
