--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -20,3 +20,32 @@
       width: 100% !important;
    }
 }
+
+@media screen and (max-width 550px) {
+   .page-title {
+      font-size: 20px;
+      font-size: 2rem;
+   }
+   .new-donation-button-parent {
+      text-align: center;
+      span {
+         display: none !important;
+      }
+   }
+   .donation-button {
+      padding: 5px;
+   }
+   .city-item {
+      a {
+         padding: 5px;
+      }
+   }
+}
+
+@media screen and (max-width: 767px) {
+   .single-donation-list {
+      min-height: 65px;
+      max-height: 65px;
+      padding: 10px 0;
+   }
+}
