Added a search bar at the top of each region page
Not functional yet.

--- a/app/views/donations/_region.html.erb
+++ b/app/views/donations/_region.html.erb
@@ -5,6 +5,10 @@
    </div>
 
    <div class="row">
+      <%= render 'donations/region/search_form', region: region, search_placeholder: search_placeholder %>
+   </div>
+
+   <div class="row">
       <%= render 'donations/region/cities', region: region %>
    </div>
 
