--- a/app/assets/stylesheets/partials/region_page.scss
+++ b/app/assets/stylesheets/partials/region_page.scss
@@ -1,3 +1,31 @@
+.fa-search {
+   position: absolute;
+   bottom: 14px;
+   left: 10px;
+   width: 20px;
+   height: 10px;
+}
+
+#search-form {
+   position: relative;
+   input {
+      border: solid 2px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+      box-shadow: none;
+      outline: 0;
+   }
+   input:focus {
+      border: solid 2px rgba(0, 0, 0, 0.35);
+   }
+   input#search {
+      padding: 15px;
+      width: 100%;
+      height: 20px;
+      margin: 10px 0;
+      padding-left: 30px;
+   }
+}
+
 .single-donation-list {
    min-height: 45px;
    max-height: 45px;
