--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -37,3 +37,11 @@ a:hover, a:active, a:link, a:visted {
    background-color: $navbarColor;
    color: white !important;
 }
+
+.container {
+   padding: 0;
+}
+
+.row {
+   margin: 0;
+}
