--- a/app/views/donations/_region.html.erb
+++ b/app/views/donations/_region.html.erb
@@ -15,7 +15,7 @@
    <div class="row">
       <div class="col-sm-12", id="feed">
          <%= render @donations %>
-         <%= render no_donations_partial_path %>
+         <%= render no_donations_partial_path(@donations) %>
       </div>
    </div>
 
