Updated each region to have better data, instead of development data

--- a/app/views/donations/santa_barbara_county.html.erb
+++ b/app/views/donations/santa_barbara_county.html.erb
@@ -2,6 +2,6 @@
 
 <%= render partial: 'donations/region', locals: {
    region: "santa_barbara_county",
-   page_title: "SB GOT FOOD YOO!",
-   search_placeholder: "Santa Barbara, SB City 1, ..."
+   page_title: "Santa Barbara can you end hunger and food waste?",
+   search_placeholder: "Crackers, canned beans, prepared meal, ..."
 } %>
