--- a/app/views/donations/san_luis_obispo_county.html.erb
+++ b/app/views/donations/san_luis_obispo_county.html.erb
@@ -2,6 +2,6 @@
 
 <%= render partial: 'donations/region', locals: {
    region: "san_luis_obispo_county",
-   page_title: "SLO COUNTY HAZ GOT FOOD!",
-   search_placeholder: "San Luis Obispo, Grover Beach, etc."
+   page_title: "SLO can we end hunger and food waste?",
+   search_placeholder: "Crackers, canned beans, prepared meal, ..."
 } %>
