--- a/app/assets/stylesheets/partials/region_page.scss
+++ b/app/assets/stylesheets/partials/region_page.scss
@@ -78,10 +78,10 @@
 }
 
 .new-donation-button-parent {
-   text-align: right;
+   text-align: center;
    span {
-      font-size: 12px;
-      font-size: 1.2rem;
+      font-size: 14px;
+      font-size: 1.4rem;
    }
 }
 
