Updated the view donation page to show all of info, not just details.
Also fixed the css so if the elements take up more of the page then it will scroll.

--- a/app/assets/stylesheets/partials/show.scss
+++ b/app/assets/stylesheets/partials/show.scss
@@ -1,6 +1,7 @@
 #single-donation-content {
    background: white;
-   height: calc(100vh - 50px);
+   height: calc(100vh -0px);
+   overflow-y: scroll !important;
 
    h3 {
       text-align: center;
