--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -4,6 +4,22 @@
          <div class="donated-by">Donated By <%= @donation.user.name %> </div>
          <h3> <%= @donation.name %> </h3>
          <p> <%= @donation.details %> </p>
+         <p> <%= @donation.fresh_until %> </p>
+         <p> <%= @donation.latitude %> </p>
+         <p> <%= @donation.longitude %> </p>
+         <p> <%= @donation.pickup_notes %> </p>
+         <p> <%= @donation.is_perishable %> </p>
+         <p> <%= @donation.is_vegetarian %> </p>
+         <p> <%= @donation.is_vegan %> </p>
+         <p> <%= @donation.is_gluten_free %> </p>
+         <p> <%= @donation.contains_peanut %> </p>
+         <p> <%= @donation.contains_treenut %> </p>
+         <p> <%= @donation.contains_dairy %> </p>
+         <p> <%= @donation.contains_soy %> </p>
+         <p> <%= @donation.contains_egg %> </p>
+         <p> <%= @donation.contains_fish %> </p>
+         <p> <%= @donation.contains_shellfish %> </p>
+         <p> <%= @donation.created_at %> </p>
       </div>
    </div>
 </div>
