--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 // Bootstrap
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap/theme";
+@import "bootstrap-datetimepicker";
 
 // Variables
 @import "base/variables";
