--- a/app/views/business_users/registrations/new.html.erb
+++ b/app/views/business_users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="sign-up-form">
    <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-         <h2 class="text-center">Free Signup</h2>
+         <h2 class="text-center">Free Business Signup</h2>
 
          <%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
