--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,7 @@
 <%= render 'donations/modal' %>
-<%= render @donations %>
+
+<div class="container">
+  <div class="row">
+    <%= render @donations %>
+  </div>
+</div>
