--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'donations/modal' %>
 
-<div class="container">
+<div class="container col-sm-8 col-sm-offset-2">
   <div class="row">
     <%= render @donations %>
   </div>
