--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,2 @@
 <%= render 'donations/modal' %>
-
-<div class="container col-sm-8 col-sm-offset-2">
-
-  <div class="row">
-    <%= render @donations %>
-  </div>
-
-  <div class="infinite-scroll">
-    <%= will_paginate @donations %>
-  </div>
-
-</div>
+<%= render 'donations/donations_list' %>
