Added a friendly message when there are no donations nearby.

--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -2,6 +2,7 @@
 
   <div class="row">
     <%= render @donations %>
+    <%= render no_donations_partial_path %>
   </div>
 
   <div class="infinite-scroll">
