--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -1,6 +1,10 @@
 <div class="container col-sm-8 col-sm-offset-2">
 
   <div class="row">
+    <%= render "donations/search_bar" %>
+  </div>
+
+  <div class="row">
     <%= render @donations %>
     <%= render no_donations_partial_path %>
   </div>
