Testing that automatic deployment works after tests pass

--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -5,6 +5,10 @@
   </div>
 
   <div class="row">
+    <p> TEST TITLE! </p>
+  </div>
+
+  <div class="row">
     <%= render @donations %>
     <%= render no_donations_partial_path %>
   </div>
