--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -1,5 +1,9 @@
 <div class="container col-sm-8 col-sm-offset-2">
 
+  <div class=row>
+    <h1> Nearby Donations </h1>
+  </div>
+
   <div class="row">
     <%= render "donations/search_bar" %>
   </div>
