--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -1,6 +1,6 @@
 <script>
   document.addEventListener("DOMContentLoaded", function(){
-    initMap(<%=@donation.latitude%>, <%=@donation.longitude%>)
+    initMapForShow(<%=@donation.latitude%>, <%=@donation.longitude%>)
   });
 </script>
 
