--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -8,7 +8,7 @@
     <%= render "donations/search_bar" %>
   </div>
 
-  <div class="row">
+  <div class="row" id="donations-list">
     <%= render @donations %>
     <%= render no_donations_partial_path %>
   </div>
