--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -15,6 +15,8 @@
       <p> <div id="map"> </div> </p>
       <p> Pickup Notes: <%= @donation.pickup_notes %> </p>
 
+      <%= form.file_field
+
       Allergen Information:
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value=@donation.is_perishable id="isPerishableCheckbox">
