--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -5,8 +5,8 @@
 </script>
 
 <div id="single-donation-content" class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+  <div class="col-sm-6 col-sm-offset-3">
+    <div class="row">
       <div class="donated-by">Donated by <%= @donation.user.name %> </div>
       <h3> <%= @donation.name %> </h3>
       <p> Description: <%= @donation.description %> </p>
@@ -15,80 +15,44 @@
       <p> <div id="map"> </div> </p>
       <p> Pickup Notes: <%= @donation.pickup_notes %> </p>
 
-      Allergen Information:
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.is_perishable id="isPerishableCheckbox">
-        <label class="form-check-label" for="isPerishableCheckbox">
-          Is perishable?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.requires_preparation id="requiresPreparationCheckbox">
-        <label class="form-check-label" for="requiresPreparationCheckbox">
-          Requires preparation?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.is_vegetarian id="isVegetarianCheckbox">
-        <label class="form-check-label" for="isVegetarianCheckbox">
-          Is vegetarian?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.is_vegan id="isVeganCheckbox">
-        <label class="form-check-label" for="isVeganCheckbox">
-          Is vegan?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.is_gluten_free id="isGlutenFreeCheckbox">
-        <label class="form-check-label" for="isGlutenFreeCheckbox">
-          Is gluten free?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_peanut id="containsPeanutCheckbox">
-        <label class="form-check-label" for="containsPeanutCheckbox">
-          Contains peanuts?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_treenut id="containsTreenutCheckbox">
-        <label class="form-check-label" for="containsTreenutCheckbox">
-          Contains treenuts?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_dairy id="containsDairyCheckbox">
-        <label class="form-check-label" for="containsDairyCheckbox">
-          Contains dairy?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_soy id="containsSoyCheckbox">
-        <label class="form-check-label" for="containsSoyCheckbox">
-          Contains soy?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_egg id="containsEggCheckbox">
-        <label class="form-check-label" for="containsEggCheckbox">
-          Contains eggs?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_fish id="containsFishCheckbox">
-        <label class="form-check-label" for="containsFishCheckbox">
-          Contains fish?
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value=@donation.contains_shellfish id="containsShellfishCheckbox">
-        <label class="form-check-label" for="containsShellfishCheckbox">
-          Contains shellfish?
-        </label>
-      </div>
+      <h2>Allergen Information:</h2>
 
+      <div class="row">
+        <%= check_box_tag :is_perishable, "t", @donation.is_perishable, options={disabled: true} %> <strong> Is perishable? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :requires_preparation, "t", @donation.requires_preparation, options={disabled: true} %> <strong> Requires preparation? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :is_vegetarian, "t", @donation.is_vegetarian, options={disabled: true} %> <strong> Is vegetarian? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :is_vegan, "t", @donation.is_vegan, options={disabled: true} %> <strong> Is vegan? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :is_gluten_free, "t", @donation.is_gluten_free, options={disabled: true} %> <strong> Is gluten free? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_peanut, "t", @donation.contains_peanut, options={disabled: true} %> <strong> Contains peanuts? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_treenut, "t", @donation.contains_treenut, options={disabled: true} %> <strong> Contains treenuts? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_dairy, "t", @donation.contains_dairy, options={disabled: true} %> <strong> Contains dairy? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_soy, "t", @donation.contains_soy, options={disabled: true} %> <strong> Contains soy? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_egg, "t", @donation.contains_egg, options={disabled: true} %> <strong> Contains eggs? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_fish, "t", @donation.contains_fish, options={disabled: true} %> <strong> Contains fish? </strong>
+      </div>
+      <div class="row">
+        <%= check_box_tag :contains_shellfish, "t", @donation.contains_shellfish, options={disabled: true} %> <strong> Contains shellfish? </strong>
+      </div>
     </div>
   </div>
 </div>
