Finished adding image uploading!

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -70,6 +70,8 @@
     <% end %>
   <% end %>
 
+  <%= f.file_field :images, multiple: true %>
+
   <%= f.submit class: "form-control"%>
 
 <% end %>
