--- a/app/views/layouts/navigation/collapsible_list/_not_signed_in_links.html.erb
+++ b/app/views/layouts/navigation/collapsible_list/_not_signed_in_links.html.erb
@@ -1,4 +1,2 @@
-<li> <%= link_to 'Login', new_user_session_path %> </li>
-<li> <%= link_to 'Business Login', new_business_user_session_path %> </li>
-<li> <%= link_to 'Signup', new_user_registration_path %> </li>
-<li> <%= link_to 'Business Signup', new_business_user_registration_path %> </li>
+<li> <%= link_to 'Sign In', new_user_session_path %> </li>
+<li> <%= link_to 'Sign Up', new_user_registration_path %> </li>
