--- a/app/views/pages/why_signup.html.erb
+++ b/app/views/pages/why_signup.html.erb
@@ -1,23 +1,17 @@
 <div class="container-fluid col-lg-6 col-lg-offset-3">
 
   <div class="row">
-    <button> <%= link_to "Login", new_user_session_path %> </button>
+    <button> <%= link_to "Sign In", new_user_session_path %> </button>
   </div>
   <div class="row">
-    <button> <%= link_to "Business Login", new_business_user_session_path %> </button>
-  </div>
-  <div class="row">
-    <h1> Why signup?</h1>
+    <h1> Why sign up?</h1>
     <h2> An account is required to add a donation.</h2>
-    <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be logged in to create a new donation.
+    <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation.
     Creating an account only requires a valid email, and we will NEVER sell or give it out.
     Only your name will be shown with your donation.</p>
   </div>
   <div class="row">
-    <button> <%= link_to 'Signup', new_user_registration_path %> </button>
-  </div>
-  <div class="row">
-    <button> <%= link_to 'Business Signup', new_business_user_registration_path %> </button>
+    <button> <%= link_to 'Sign Up', new_user_registration_path %> </button>
   </div>
 
 </div>
