Debugging google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,15 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id#{ENV['GOOGLE_ANALYTICS_ID']}"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139559800-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', "#{GOOGLE_ANALYTICS_ID}");
+    gtag('config', 'UA-139559800-1');
   </script>
+
 
   <title>ShareTheFood</title>
   <%= csrf_meta_tags %>
