Added Rubocop config file. Working on fixing all style issues.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="jumbotron">
     <button>
-      <%= link_to 'I have extra food', have_food_partial_path %>
+      <%= link_to 'I have extra food', food_partial_path? %>
     </button>
   </div>
 
