--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,16 +1,16 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- */
+* This is a manifest file that'll be compiled into application.css, which will include all the files
+* listed below.
+*
+* Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+* vendor/assets/stylesheets directory can be referenced here using a relative path.
+*
+* You're free to add application-wide styles to this file and they'll appear at the bottom of the
+* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+* files in this directory. Styles in this file should be added after the last require_* statement.
+* It is generally better to create a new file per style scope.
+*
+*/
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -19,4 +19,119 @@
 
 @import "responsive";
 @import "layouts/*";
-@import "layouts/donations/*"
+
+.single-donation-card
+{
+  box-shadow: 1px 1px 4px rgba(0,0,0, 0.3);
+  color: black;
+  padding: 10px;
+  text-align: left;
+  transition: border 0.1s, background 0.5s;
+
+  a, a:active, a:hover
+  {
+    color: black;
+  }
+
+  &:hover
+  {
+    cursor: pointer;
+    background: white;
+    box-shadow: none;
+    border-radius: 1%;
+  }
+}
+
+.modal-content
+{
+  h3
+  {
+    text-align: center;
+  }
+  p
+  {
+    margin: 50px 0;
+  }
+  .donated-by
+  {
+    color: rgba(0,0,0, 0.5);
+  }
+}
+
+.modal-content
+{
+  .loaded-data
+  {
+    padding: 0 10px;
+    .donated-by
+    {
+      margin: 0px;
+    }
+  }
+}
+
+.viewing
+{
+  text-align: center;
+  a
+  {
+    background-color: $navbarColor;
+    padding: 10px;
+    color: white;
+    border-radius: 10px;
+    &:hover
+    {
+      background-color: black;
+      color: white;
+    }
+  }
+}
+
+#single-donation-content
+{
+  background: white;
+  height: calc(100vh - 50px);
+  overflow: scroll;
+
+  h3
+  {
+    text-align: center;
+  }
+  p
+  {
+    margin: 50px 0px;
+  }
+  .donated-by
+  {
+    font-size: 12px;
+    font-size: 1.2rem;
+    margin: 20px 0;
+    color: rgba(0,0,0, 0.5);
+  }
+}
+
+#map
+{
+  width: 600px;
+  height: 400px;
+}
+
+
+#map1
+{
+  width: 600px;
+  height: 400px;
+}
+
+
+#map2
+{
+  width: 600px;
+  height: 400px;
+}
+
+#map3
+{
+  width: 600px;
+  height: 400px;
+}
