--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1,17 +1,40 @@
-@media screen and (min-width: 767px)
-{
-   .mobile-menu
-   {
-      display: none !important;
-   }
+// Extra small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
 
-   .h-md-100 { height: 75vh; }
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px)
+{
+  .mobile-menu
+  {
+     display: none !important;
+  }
+
+  .h-md-100 { height: 75vh; }
 }
 
-@media screen and (max-width: 767px)
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { }
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) { }
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px)
 {
-   .pc-menu
-   {
-      display: none !important;
-   }
+  .pc-menu
+  {
+     display: none !important;
+  }
 }
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) { }
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) { }
