--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col">
     <div class="row">
       <div class="jumbotron jumbotron-fluid">
         <div class="container-fluid">
