--- a/app/views/pages/why_signup.html.erb
+++ b/app/views/pages/why_signup.html.erb
@@ -1,17 +1,20 @@
-<div class="container-fluid col-lg-6 col-lg-offset-3">
+<div class="container-fluid">
+  <div class="col-lg-6 col-lg-offset-3">
 
-  <div class="row">
-    <button> <%= link_to "Sign In", new_user_session_path %> </button>
+    <div class="row">
+      <a class="btn btn-primary btn-lg" href=<%= new_user_session_path %> role="button">Sign In</a>
+    </div>
+    <div class="row">
+      <h1> Why sign up?</h1>
+    </div>
+    <div class="row">
+      <h2> An account is required to add a donation.</h2>
+    </div>
+    <div class="row">
+      <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation. Creating an account only requires a valid email, and we will NEVER sell or give it out. Only your name will be shown with your donation.</p>
+    </div>
+    <div class="row">
+      <a class="btn btn-primary btn-lg" href=<%= new_user_registration_path %> role="button">Sign Up</a>
+    </div>
   </div>
-  <div class="row">
-    <h1> Why sign up?</h1>
-    <h2> An account is required to add a donation.</h2>
-    <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation.
-    Creating an account only requires a valid email, and we will NEVER sell or give it out.
-    Only your name will be shown with your donation.</p>
-  </div>
-  <div class="row">
-    <button> <%= link_to 'Sign Up', new_user_registration_path %> </button>
-  </div>
-
 </div>
