--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -4,14 +4,14 @@
 
   <!-- First Half -->
   <div class="col-md-6 p-0 h-md-100">
-    <div class="text-white d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
+    <div class="d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
       <%= render 'donations/donations_map' %>
     </div>
   </div>
 
   <!-- Second Half -->
-  <div class="col-md-6 p-0 bg-white h-md-100 loginarea">
-    <div class="d-md-flex align-items-center h-md-100 p-5 justify-content-center">
+  <div class="col-md-6 p-0 bg-white h-md-100">
+    <div class="d-md-flex align-items-center h-md-100 p-5 text-center justify-content-center">
       <%= render 'donations/donations_list' %>
     </div>
   </div>
