--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,7 +17,7 @@
           <h1 class="display-4">Have some extra food?</h1>
           <p class="lead">Create an account to donate your food!</p>
           <hr class="my-4">
-          <p>Click below to add a new donation! You'll have to create an account first.</p>
+          <p>Click below to add a new donation.</p>
           <a class="btn btn-primary btn-lg" href=<%= food_partial_path? %> role="button">Add Donation</a>
         </div>
       </div>
