--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,11 +20,13 @@
           Account Settings
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <% if user_signed_in? %>
           <a class="dropdown-item" href="/users/edit">Edit Account</a>
+          <a class="dropdown-item" href="/users/sign_out">Sign Out</a>
+          <% else %>
           <a class="dropdown-item" href="/users/sign_up">Sign Up</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/">Sign Out</a>
-            <a class="dropdown-item disabled" href="/" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="dropdown-item" href="/users/sign_in">Log In</a>
+          <% end %>
         </div>
       </li>
     </ul>
