--- a/app/views/pages/why_signup.html.erb
+++ b/app/views/pages/why_signup.html.erb
@@ -11,7 +11,7 @@
       <h2> An account is required to add a donation.</h2>
     </div>
     <div class="row">
-      <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation. Creating an account only requires a valid email, and we will NEVER sell or give it out. Only your name will be shown with your donation.</p>
+      <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation. Creating an account only requires a valid email, and we will never sell or give it out. Only your name will be shown with your donation.</p>
     </div>
     <div class="row">
       <a class="btn btn-primary btn-lg" href=<%= new_user_registration_path %> role="button">Sign Up</a>
