--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,16 +1,16 @@
 <%= render 'donations/modal' %>
 
 <div class="d-md-flex h-md-100 align-items-center">
-
-  <!-- First Half -->
+  
+  <!-- Donation Map -->
   <div class="col-md-6 p-0 h-md-100">
     <div class="d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
       <%= render 'donations/donations_map' %>
     </div>
   </div>
 
-  <!-- Second Half -->
-  <div class="col-md-6 p-0 bg-white h-md-100">
+  <!-- Donation List -->
+  <div class="col-md-6 p-0 h-md-100">
     <div class="d-md-flex align-items-center h-md-100 p-5 text-center justify-content-center">
       <%= render 'donations/donations_list' %>
     </div>
