Expanded map and list view to better fill screen space

--- a/app/views/donations/_donations_map.html.erb
+++ b/app/views/donations/_donations_map.html.erb
@@ -4,7 +4,7 @@
   });
 </script>
 
-<div class="container col-sm-8 col-sm-offset-2">
+<div class="container-fluid">
 
   <div class=row>
     <h1> Nearby Donations Map: </h1>
