--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -7,11 +7,8 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px)
 {
-  .mobile-menu
-  {
-     display: none !important;
-  }
-
+  // Forces the dual map/list donation view to switch from horizontal
+  // to vertical when the screen gets small enough.
   .h-md-100 { height: 75vh; }
 }
 
@@ -27,14 +24,17 @@
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px)
 {
-  .pc-menu
-  {
-     display: none !important;
-  }
+
 }
 
 // Medium devices (tablets, less than 992px)
-@media (max-width: 991.98px) { }
+@media (max-width: 991.98px)
+{
+
+}
 
 // Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) { }
+@media (max-width: 1199.98px)
+{
+
+}
