--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-sm-8 col-sm-offset-2">
+<div class="container-fluid">
 
   <div class=row>
     <h1> Nearby Donations List: </h1>
