More minor ui tweaks

--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -4,9 +4,11 @@
   });
 </script>
 
-<div class="container edit-donation">
+<div class="container-fluid edit-donation">
+  <div class="col-lg-6 col-lg-offset-3">
 
-  <h2>Edit your donation</h2>
-  <%= render 'form' %>
+    <h2>Edit your donation</h2>
+    <%= render 'form' %>
 
+  </div>
 </div>
