All bootstrap columns, users and donation forms, now fill to width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,15 @@
   width: 100%;
 }
 
+.field-container
+{
+  padding: 10px;
+}
+input, select, textarea
+{
+  width: 100%;
+}
+
 .single-donation-card
 {
   box-shadow: 1px 1px 4px rgba(0,0,0, 0.3);
