--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -5,7 +5,7 @@
 </script>
 
 <div class="container-fluid edit-donation">
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col-lg-6 col-lg-offset-3" align="center"">
 
     <h2>Edit your donation</h2>
     <%= render 'form' %>
