--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -5,7 +5,7 @@
 </script>
 
 <div class="container-fluid" id="single-donation-content">
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col-lg-6 col-lg-offset-3" align="center"">
     <div class="donated-by">Donated by <%= @donation.user.name %> </div>
     <h3> <%= @donation.name %> </h3>
     <p> Description: <%= @donation.description %> </p>
