--- a/app/views/business_users/registrations/edit.html.erb
+++ b/app/views/business_users/registrations/edit.html.erb
@@ -1,16 +1,16 @@
 <div class="container-fluid">
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col-lg-6 col-lg-offset-3" align="center>
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :name %><br />
       <%= f.text_field :name, autofocus: true, placeholder: "Will be shown publicly." %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Never used publicly." %>
     </div>
@@ -19,7 +19,7 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
       <% if @minimum_password_length %>
@@ -28,12 +28,12 @@
       <% end %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "current-password" %>
     </div>
