--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -2,8 +2,8 @@
   document.addEventListener("DOMContentLoaded", initMapForNew);
 </script>
 
-
-<div class="container new-donation">
+<div class="container-fluid new-donation">
+  <div class="col-lg-6 col-lg-offset-3" align="center"">
 
   <h1>Add a new donation</h1>
   <%= render 'form' %>
