--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <div class="container-fluid">
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col-lg-6 col-lg-offset-3" align="center">
     <h2>Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :name %><br />
       <%= f.text_field :name, autofocus: true, placeholder: "Will be shown publicly." %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Never used publicly." %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -23,7 +23,7 @@
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
 
-    <div class="field">
+    <div class="field-container">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
