Added custom theme from theme builder. Removed most old themes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,12 @@
 *
 */
 
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import "variables";
-
 @import "responsive";
-@import "layouts/*";
+@import "search_bar";
 
 .jumbotron
 {
@@ -29,99 +28,10 @@
 {
   padding: 10px;
 }
+
 input, select, textarea
 {
   width: 100%;
-}
-
-.single-donation-card
-{
-  box-shadow: 1px 1px 4px rgba(0,0,0, 0.3);
-  color: black;
-  padding: 10px;
-  text-align: left;
-  transition: border 0.1s, background 0.5s;
-
-  a, a:active, a:hover
-  {
-    color: black;
-  }
-
-  &:hover
-  {
-    cursor: pointer;
-    background: white;
-    box-shadow: none;
-    border-radius: 1%;
-  }
-}
-
-.modal-content
-{
-  h3
-  {
-    text-align: center;
-  }
-  p
-  {
-    margin: 50px 0;
-  }
-  .donated-by
-  {
-    color: rgba(0,0,0, 0.5);
-  }
-}
-
-.modal-content
-{
-  .loaded-data
-  {
-    padding: 0 10px;
-    .donated-by
-    {
-      margin: 0px;
-    }
-  }
-}
-
-.viewing
-{
-  text-align: center;
-  a
-  {
-    background-color: $navbarColor;
-    padding: 10px;
-    color: white;
-    border-radius: 10px;
-    &:hover
-    {
-      background-color: black;
-      color: white;
-    }
-  }
-}
-
-#single-donation-content
-{
-  background: white;
-  height: calc(100vh - 50px);
-  overflow: scroll;
-
-  h3
-  {
-    text-align: center;
-  }
-  p
-  {
-    margin: 50px 0px;
-  }
-  .donated-by
-  {
-    font-size: 12px;
-    font-size: 1.2rem;
-    margin: 20px 0;
-    color: rgba(0,0,0, 0.5);
-  }
 }
 
 #map
@@ -130,13 +40,11 @@ input, select, textarea
   height: 650px;
 }
 
-
 #map1
 {
   width: 900px;
   height: 650px;
 }
-
 
 #map2
 {
@@ -149,3 +57,5 @@ input, select, textarea
   width: 900px;
   height: 650px;
 }
+
+@import "custom_theme";
