--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -7,7 +7,7 @@
 <div class="container-fluid edit-donation">
   <div class="col-lg-6 col-lg-offset-3" align="center"">
 
-    <h2>Edit your donation</h2>
+    <h1><%= title 'Edit Donation' %></h1>
     <%= render 'form' %>
 
   </div>
