--- a/app/views/business_users/passwords/new.html.erb
+++ b/app/views/business_users/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="col-lg-6 col-lg-offset-3" align="center">
-    <h2>Forgot your password?</h2>
+    <h1><%= title 'Forgot Your Password?' %></h1>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
