--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,19 +1,24 @@
 <%= render 'donations/modal' %>
 
 <div class="d-md-flex h-md-100 align-items-center">
-  
-  <!-- Donation Map -->
-  <div class="col-md-6 p-0 h-md-100">
-    <div class="d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
-      <%= render 'donations/donations_map' %>
+  <div class="col" align="center">
+    <div class="row">
+      <h1><%= title 'View Donations' %></h1>
+    </div>
+    <div class="row">
+      <!-- Donation Map -->
+      <div class="col-md-6 p-0 h-md-100">
+        <div class="d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
+          <%= render 'donations/donations_map' %>
+        </div>
+      </div>
+
+      <!-- Donation List -->
+      <div class="col-md-6 p-0 h-md-100">
+        <div class="d-md-flex align-items-center h-md-100 p-5 text-center justify-content-center">
+          <%= render 'donations/donations_list' %>
+        </div>
+      </div>
     </div>
   </div>
-
-  <!-- Donation List -->
-  <div class="col-md-6 p-0 h-md-100">
-    <div class="d-md-flex align-items-center h-md-100 p-5 text-center justify-content-center">
-      <%= render 'donations/donations_list' %>
-    </div>
-  </div>
-
 </div>
