--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -6,6 +6,7 @@
 
 <div class="container-fluid" id="single-donation-content">
   <div class="col-lg-6 col-lg-offset-3" align="center"">
+    <h1><%= title 'Show Donation Details' %></h1>
     <div class="donated-by">Donated by <%= @donation.user.name %> </div>
     <h3> <%= @donation.name %> </h3>
     <p> Description: <%= @donation.description %> </p>
