--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Share the Food</title>
+  <%= display_meta_tags site: 'Share the Food' %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
