--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container-fluid">
   <div class="col">
+    <% description 'Find donations. Add a new donation. Create an account. Help your community!' %>
+    <% keywords 'Share the Food, Home Page, View Donation, Find Donation, Add Donation, New Donation, Upload Donation, View, Find, Add, New, Upload, Donation, Create Account, New Account, Account' %>
+
     <div class="row">
       <div class="jumbotron jumbotron-fluid">
         <div class="container-fluid">
