--- a/app/views/pages/why_signup.html.erb
+++ b/app/views/pages/why_signup.html.erb
@@ -1,6 +1,9 @@
 <div class="container-fluid">
   <div class="col-lg-6 col-lg-offset-3">
     <h1><%= title 'Why signup?' %></h1>
+    <% description 'Why create an account? So we can make sure your donation is accountable.' %>
+    <% keywords 'Share the Food, Why Signup, Signup, Create Account, Donation' %>
+
     <h2> An account is required to add a donation.</h2>
     <p> In order to ensure accountability and respect of the food donated on this platform, you must have an account and be signed in to create a new donation. Creating an account only requires a valid email, and we will never sell or give it out. Only your name will be shown with your donation.</p>
     <a class="btn btn-primary btn-lg" href=<%= new_user_registration_path %> role="button">Sign Up</a>
