--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -8,6 +8,9 @@
   <div class="col-lg-6 col-lg-offset-3" align="center"">
 
     <h1><%= title 'Edit Donation' %></h1>
+    <% description 'Edit the details of your donation.' %>
+    <% keywords 'Share the Food, Edit Donation, Redo Donation, Fix Donation, Donation Details, Edit, Redo, Fix, Details, Donation' %>
+
     <%= render 'form' %>
 
   </div>
