--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -4,6 +4,8 @@
   <div class="col" align="center">
     <div class="row">
       <h1><%= title 'View Donations' %></h1>
+      <% description 'View all nearby donations.' %>
+      <% keywords 'Share the Food, View Donations, Find Donations, Nearby Donations, View Food, Find Food, Nearby Food, Want Food, Need Food, View, Find, Nearby' %>
     </div>
     <div class="row">
       <!-- Donation Map -->
