--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -6,6 +6,9 @@
   <div class="col-lg-6 col-lg-offset-3" align="center"">
 
   <h1><%= title 'Add Donation' %></h1>
+  <% description 'Add the details of your new donation.' %>
+  <% keywords 'Share the Food, Add Donation, New Donation, Upload Donation, Extra Food, Give Away Food, Add, New, Upload, Give Away, Donation, Donate' %>
+
   <%= render 'form' %>
 
 </div>
